# replanting-game

./: README.md  export_presets.cfg  index.html  index.pck  project.godot  rust-lib.gdextension  rust-lib.gdextension.uid  rust_lib.wasm  tileset_celluar_automata.wasm
.github/workflows/: godot-ci-rust.yml  godot-ci-web-rust.yml  godot-ci-web.yml  rust-build.yml
resources/: icon.svg.import
resources/tiles/: world_tiles.png.import  world_tileset.tres
rust-lib/: Cargo.toml
rust-lib/.cargo/: config.toml
rust-lib/src/: cellular_automata_layer.rs  lib.rs
rust-lib/src/cell_rules/: cell_support.rs  (+7 more)
scenes/: game_scene.tscn  main_menu.tscn  player_character.tscn  ui_layer.tscn
scenes/ui/: hotbar_button.tscn  ui_layer.tscn
scripts/: bouyancy_area.gd  character_body_2d.gd  character_body_2d.gd.uid  event_bus.gd  event_bus.gd.uid  mouse_sprite.gd  mouse_sprite.gd.uid  player_input_direction.gd  player_input_direction.gd.uid  player_jump_input.gd  player_jump_input.gd.uid
scripts/events/: event_bus.gd
scripts/ui/: game_over_menu_container.gd  game_over_menu_container.gd.uid  hotbar_button.gd  hotbar_button.gd.uid  mouse_sprite.gd  new_day_menu_container.gd  new_day_menu_container.gd.uid  player_energy_progress_bar.gd  player_energy_progress_bar.gd.uid  player_hotbar.gd  player_hotbar.gd.uid
scripts/world/: celluar_automata_interaction_link.gd  celluar_automata_interaction_link.gd.uid
tileset-celluar-automata/: Cargo.toml
tileset-celluar-automata/src/: lib.rs
tileset-celluar-automata/src/cell_rules/: cell_update.rs  tile_velocity_wrapper.rs  water_cell.rs
(+12 files in other folders)
