[package]
name = "tileset-celluar-automata"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = {version = "0.2.4", features = ["experimental-wasm", "lazy-function-tables"]}

[features]
nothreads = ["godot/experimental-wasm-nothreads"]